Menambahkan CSS pada file html

--- a/beauty_guide.html
+++ b/beauty_guide.html
@@ -3,6 +3,37 @@
 <head>
     <title>Self-Care is Self-Love!</title>
     <style>
+         body {
+            color: #4a4a4a; 
+            font-family: 'Times New Roman', 'Georgia', serif; 
+            line-height: 1.8; 
+            margin: 20px; /
+        }
+        h1 {
+            color: #2b2b2b; 
+            font-weight: normal; 
+            text-align: center;
+            position: relative;
+            padding-bottom: 10px;
+        }
+        h1::after {
+            content: "";
+            display: block;
+            width: 300x;
+            height: 2px;
+            background-color: #FFD700;
+            margin: 10px auto 0 auto;
+        }
+        h2, h3 {
+            color: #2b2b2b;
+            font-weight: normal;
+        }
+        a {
+            color: #b56576; 
+        }
+        a:hover {
+            text-decoration: underline;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
@@ -17,6 +48,16 @@
         th {
             background-color: #FFB6C1;
             color: white;
+        }
+        .sub-header {
+            color: #B8860B;
+            font-size: 18px;
+            font-style: italic;
+            text-align: left;
+        }
+        .image-container {
+            text-align: center;
+            margin-top: 10px;
         }
     </style>
 </head>
